--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "express": "^4.17.1",
+    "node-opus": "^0.3.3",
     "snoowrap": "^1.21.0",
     "string-similarity": "^4.0.2"
   }
