--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-opus": "^0.3.3",
+    "puppeteer": "^5.3.1",
     "snoowrap": "^1.21.0",
     "string-similarity": "^4.0.2"
   },
